app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-service
  namespace: budget
spec:
  selector:
    app: budget
  ports:
    - port: 80
      targetPort: 5000
